<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- 首页 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

    <!-- UI设置 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_settings_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="12dp">

        <asia.nana7mi.arirang.view.FeatureItemView
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:featureName="@string/title_activity_language_settings"
            app:featureIcon="@drawable/ic_language"/>

        <asia.nana7mi.arirang.view.FeatureItemView
            android:id="@+id/region_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:featureName="@string/user_region_title"
            app:featureIcon="@drawable/ic_language"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>
